--- a/.github/workflows/website_build.counterpart.yaml
+++ b/.github/workflows/website_build.counterpart.yaml
@@ -18,4 +18,4 @@ jobs:
   build_docusaurus:
     runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/workflows/always_success.yaml
+      - uses: ./.github/workflows/always_success
