--- a/.github/workflows/website_build.counterpart.yaml
+++ b/.github/workflows/website_build.counterpart.yaml
@@ -18,4 +18,5 @@ jobs:
   build_docusaurus:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/always_success
