--- a/.github/workflows/flutter_build.counterpart.yaml
+++ b/.github/workflows/flutter_build.counterpart.yaml
@@ -34,4 +34,5 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/always_success
