--- a/.github/workflows/flutter_ci.counterpart.yaml
+++ b/.github/workflows/flutter_ci.counterpart.yaml
@@ -45,4 +45,5 @@ jobs:
       matrix:
         os: [windows-latest, macos-latest, ubuntu-latest]
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/always_success
