--- a/.github/workflows/shell_script_ci.counterpart.yaml
+++ b/.github/workflows/shell_script_ci.counterpart.yaml
@@ -16,4 +16,5 @@ jobs:
   shellcheck:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/always_success
