--- a/.github/workflows/deploy_macos_dry_run.counterpart.yaml
+++ b/.github/workflows/deploy_macos_dry_run.counterpart.yaml
@@ -23,4 +23,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/workflows/always_success
+      - uses: ./.github/workflows/always_success.yaml
