--- a/.github/workflows/flutter_build.counterpart.yaml
+++ b/.github/workflows/flutter_build.counterpart.yaml
@@ -35,4 +35,4 @@ jobs:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/workflows/always_success
+      - uses: ./.github/workflows/always_success.yaml
