--- a/.github/workflows/website_build.counterpart.yaml
+++ b/.github/workflows/website_build.counterpart.yaml
@@ -19,4 +19,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: ./.github/workflows/always_success.yaml
+      - run: .github/scripts/do_nothing.sh
