[Scheduled] `flutter pub upgrade --null-safety` (#433)
* [Scheduled] `flutter pub upgrade --null-safety`

* add trigger

* add trigger

Co-authored-by: sensuikan1973 <sensuikan1973@users.noreply.github.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,12 +1,17 @@
 mac:
   - macos/**/*
   - .ruby-version
+  - .github/scripts/macos/**/*
 
 linux:
   - linux/**/*
+  - assets/libedax/dll/libedax.so
+  - .github/scripts/linux/**/*
 
 windows:
   - windows/**/*
+  - assets/libedax/dll/libedax-x64.dll
+  - .github/scripts/windows/**/*
 
 website:
   - website/**/*
