--- a/.github/workflows/flutter_build.yaml
+++ b/.github/workflows/flutter_build.yaml
@@ -14,6 +14,7 @@ on:
       - 'linux/**'
       - 'windows/**'
       - 'assets/**'
+      - 'scripts/setup_flutter.sh'
   push:
     branches: [main]
     paths:
@@ -25,6 +26,7 @@ on:
       - 'linux/**'
       - 'windows/**'
       - 'assets/**'
+      - 'scripts/setup_flutter.sh'
   workflow_dispatch:
 
 jobs:
