--- a/.github/workflows/flutter_ci.counterpart.yaml
+++ b/.github/workflows/flutter_ci.counterpart.yaml
@@ -13,6 +13,7 @@ on:
       - 'windows/**'
       - 'assets/**'
       - '.codecov.yml'
+      - 'scripts/setup_flutter.sh'
   push:
     branches: [main]
     paths-ignore:
@@ -26,6 +27,7 @@ on:
       - 'windows/**'
       - 'assets/**'
       - '.codecov.yml'
+      - 'scripts/setup_flutter.sh'
   workflow_dispatch:
 
 jobs:
