rename workflow publish -> create_release

--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -1,7 +1,7 @@
 # See: https://flutter.dev/desktop#distribution
 # REF: https://github.com/flutter/gallery/blob/master/.github/workflows/release.yml
 
-name: Publish pedax app
+name: Create release
 
 on:
   workflow_dispatch:
