--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -69,13 +69,13 @@ jobs:
         os: [windows-latest, macos-latest, ubuntu-latest] # pedax uses ffi package(libedax4dart), so run widget test on multiple OS.
         include:
           - os: windows-latest
-            setup_desktop_script: .github/scripts/windows/setup.sh
+            setup_for_flutter_desktop_script: .github/scripts/windows/install_additional_requirements_for_flutter.sh
             integration_test_command: flutter test integration_test --verbose
           - os: macos-latest
-            setup_desktop_script: .github/scripts/macos/setup.sh
+            setup_for_flutter_desktop_script: .github/scripts/macos/install_additional_requirements_for_flutter.sh
             integration_test_command: flutter test integration_test --verbose
           - os: ubuntu-latest
-            setup_desktop_script: .github/scripts/linux/setup.sh
+            setup_for_flutter_desktop_script: .github/scripts/linux/install_additional_requirements_for_flutter.sh
             integration_test_command: 'timeout 180 xvfb-run -a flutter test integration_test --verbose || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
     steps:
       - uses: actions/checkout@v3
@@ -85,7 +85,7 @@ jobs:
         run: ./scripts/setup_flutter.sh
       - name: setup flutter desktop
         shell: bash
-        run: ${{ matrix.setup_desktop_script }}
+        run: ${{ matrix.setup_for_flutter_desktop_script }}
       - name: doctor
         run: flutter doctor -v
       - name: install dependencies
