--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@
 
 name: pedax
 description: Reversi Board with edax.
-publish_to: "none"
+publish_to: none
 homepage: https://sensuikan1973.github.io/pedax/
 repository: https://github.com/sensuikan1973/pedax
 issue_tracker: https://github.com/sensuikan1973/pedax/issues
