--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@
 
 name: pedax
 description: Reversi Board with edax.
-publish_to: "none"
+publish_to: none
 homepage: https://sensuikan1973.github.io/pedax/
 repository: https://github.com/sensuikan1973/pedax
 issue_tracker: https://github.com/sensuikan1973/pedax/issues
@@ -24,8 +24,8 @@ issue_tracker: https://github.com/sensuikan1973/pedax/issues
 version: 2.10.0+38
 
 environment: # See: https://dart.dev/tools/pub/pubspec#sdk-constraints
-  sdk: ">=2.16.2 <3.0.0"
-  flutter: ^2.10.5 # See: https://flutter.dev/docs/development/tools/sdk/releases
+  sdk: ">=2.17.0-0 <3.0.0"
+  flutter: ^2.13.0-0 # See: https://flutter.dev/docs/development/tools/sdk/releases
 
 dependencies:
   crypto: ^3.0.1
