--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  meta: ^1.7.0
   msix: ^3.6.1
   pedantic_sensuikan1973: ^3.1.0
 
