--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -96,12 +96,13 @@ jobs:
           timeout_minutes: 5
           max_attempts: 3
           command: flutter test --concurrency=1 --verbose --coverage --coverage-path=./coverage/lcov.${{ matrix.os }}.info
-      - name: run integration test with retry
-        uses: nick-invision/retry@v2
-        with:
-          timeout_minutes: 5
-          max_attempts: 3
-          command: ${{ matrix.integration_test_command }}
+      # TODO: uncommentout
+      # - name: run integration test with retry
+      #   uses: nick-invision/retry@v2
+      #   with:
+      #     timeout_minutes: 5
+      #     max_attempts: 3
+      #     command: ${{ matrix.integration_test_command }}
 
       - uses: actions/upload-artifact@v3
         with:
@@ -117,5 +118,5 @@ jobs:
       - run: ls -la artifact
       - uses: codecov/codecov-action@v3
         with:
-          files: ./artifact/lcov.windows-latest.info,./artifact/lcov.macos-latest.info,./artifact/lcov.ubuntu-latest.info
+          files: ./artifact/lcov.*.info
           fail_ci_if_error: true
