--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -70,13 +70,13 @@ jobs:
         include:
           - os: windows-latest
             setup_for_flutter_desktop_script: .github/scripts/windows/install_additional_requirements_for_flutter.sh
-            integration_test_command: flutter test integration_test
+            integration_test_command: flutter test integration_test --coverage --coverage-path=./coverage/lcov.info
           - os: macos-latest
             setup_for_flutter_desktop_script: .github/scripts/macos/install_additional_requirements_for_flutter.sh
-            integration_test_command: flutter test integration_test
+            integration_test_command: flutter test integration_test --coverage --coverage-path=./coverage/lcov.info
           - os: ubuntu-latest
             setup_for_flutter_desktop_script: .github/scripts/linux/install_additional_requirements_for_flutter.sh
-            integration_test_command: 'timeout 180 xvfb-run -a flutter test integration_test || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
+            integration_test_command: 'timeout 180 xvfb-run -a flutter test integration_test --coverage --coverage-path=./coverage/lcov.info || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2.4.0
@@ -90,23 +90,27 @@ jobs:
         run: flutter doctor -v
       - name: install dependencies
         run: flutter pub get
+
       - name: run widget test with retry
         uses: nick-invision/retry@v2
         with:
           timeout_minutes: 5
           max_attempts: 3
           command: flutter test --concurrency=1 --coverage --coverage-path=./coverage/lcov.info
-
       - uses: codecov/codecov-action@v3
         with: # ref: https://github.com/codecov/codecov-action/blob/v3.1.0/.github/workflows/main.yml
           files: ./coverage/lcov.info
           flags: widget_test,${{ matrix.os }}
           fail_ci_if_error: true
 
-      # TODO: uncommentout
-      # - name: run integration test with retry
-      #   uses: nick-invision/retry@v2
-      #   with:
-      #     timeout_minutes: 5
-      #     max_attempts: 3
-      #     command: ${{ matrix.integration_test_command }}
+      - name: run integration test with retry
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 5
+          max_attempts: 3
+          command: ${{ matrix.integration_test_command }}
+      - uses: codecov/codecov-action@v3
+        with: # ref: https://github.com/codecov/codecov-action/blob/v3.1.0/.github/workflows/main.yml
+          files: ./coverage/lcov.info
+          flags: integration_test,${{ matrix.os }}
+          fail_ci_if_error: true
