--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -76,7 +76,8 @@ jobs:
             integration_test_command: flutter test integration_test --coverage --coverage-path=./coverage/lcov.integration_test.info
           - os: ubuntu-latest
             setup_for_flutter_desktop_script: .github/scripts/linux/install_additional_requirements_for_flutter.sh
-            integration_test_command: 'timeout 180 xvfb-run -a flutter test integration_test --coverage --coverage-path=./coverage/lcov.integration_test.info || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
+            integration_test_command: |
+              'timeout 180 xvfb-run -a flutter test integration_test --coverage --coverage-path=./coverage/lcov.integration_test.info || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )'
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2.4.0
