--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -78,7 +78,8 @@ jobs:
             setup_for_flutter_desktop_script: .github/scripts/linux/install_additional_requirements_for_flutter.sh
             integration_test_command: |
               timeout 180 xvfb-run -a \
-              ls -la && mkdir -p coverage && flutter test integration_test --coverage --coverage-path=./coverage/lcov.integration_test.info \
+              touhc ./coverage/lcov.integration_test.info && \
+              flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.integration_test.info \
               || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )
     steps:
       - uses: actions/checkout@v3
