--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -77,9 +77,9 @@ jobs:
           - os: ubuntu-latest
             setup_for_flutter_desktop_script: .github/scripts/linux/install_additional_requirements_for_flutter.sh
             integration_test_command: |
+              touch ./coverage/lcov.integration_test.info
               timeout 240 xvfb-run -a \
-              touch ./coverage/lcov.integration_test.info && \
-              flutter test integration_test --verbose --coverage --coverage-path=./coverage/lcov.integration_test.info \
+              flutter test integration_test --coverage --coverage-path=./coverage/lcov.integration_test.info \
               || ( [[ $? -eq 124 ]] && echo "WARNING: timeout" )
     steps:
       - uses: actions/checkout@v3
