--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -22,6 +22,11 @@ jobs:
         shell: zsh {0} # See: https://github.com/actions/virtual-environments/issues/264#issuecomment-574032011
         run: ./scripts/setup_flutter.sh
 
+      - name: install native deps on macs
+        if: runner.os == 'macOS'
+        working-directory: macos
+        run: which pod && pod --version && pod install
+
       - run: flutter pub upgrade --null-safety # See: https://dart.dev/tools/pub/cmd/pub-upgrade#--null-safety
       - name: upgrade external binary
         shell: zsh {0}
