--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,12 +56,14 @@ dependencies:
       branch: master
 
 dev_dependencies:
+  file_selector_platform_interface: ^2.0.4
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
   msix: ^3.6.1
   pedantic_sensuikan1973: ^3.2.0
+  plugin_platform_interface: ^2.1.2
 
 flutter:
   uses-material-design: true
