--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dev_dependencies:
   msix: ^3.6.1
   pedantic_sensuikan1973: ^3.2.0
   plugin_platform_interface: ^2.1.2
+  url_launcher_platform_interface: ^2.0.5
 
 flutter:
   uses-material-design: true
