--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   msix: ^3.6.1
+  path_provider_platform_interface: ^2.0.4
   pedantic_sensuikan1973: ^3.2.0
   plugin_platform_interface: ^2.1.2
   shared_preferences_platform_interface: ^2.0.0
