--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,12 +56,17 @@ dependencies:
       branch: master
 
 dev_dependencies:
+  file_selector_platform_interface: ^2.0.4
   flutter_test:
     sdk: flutter
   integration_test:
     sdk: flutter
   msix: ^3.6.2
+  path_provider_platform_interface: ^2.0.4
   pedantic_sensuikan1973: ^3.2.0
+  plugin_platform_interface: ^2.1.2
+  shared_preferences_platform_interface: ^2.0.0
+  url_launcher_platform_interface: ^2.0.5
 
 flutter:
   uses-material-design: true
