--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -84,6 +84,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2.4.0
+        with:
+          cache: true
       - name: setup flutter channel
         shell: bash
         run: ./scripts/setup_flutter.sh
