--- a/.github/workflows/deploy_website.yaml
+++ b/.github/workflows/deploy_website.yaml
@@ -21,9 +21,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3.2.0
+
+      # https://github.com/actions/setup-node/issues/206#issuecomment-774538395
+      - uses: nodenv/actions/node-version@main
+        id: nodenv
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '${{ steps.nodenv.outputs.node-version }}'
+
       - run: |-
           # See: https://github.com/actions-user
           git config --global user.email "actions@github.com"
