--- a/.github/workflows/website_build.yaml
+++ b/.github/workflows/website_build.yaml
@@ -25,8 +25,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3.2.0
+
+      # https://github.com/actions/setup-node/issues/206#issuecomment-774538395
+      - uses: nodenv/actions/node-version@main
+        id: nodenv
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '${{ steps.nodenv.outputs.node-version }}'
+
       - run: yarn install --frozen-lockfile
       - run: yarn build
