--- a/.github/workflows/website_deps.yaml
+++ b/.github/workflows/website_deps.yaml
@@ -12,9 +12,14 @@ jobs:
     timeout-minutes: 10
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3.2.0
+
+      # https://github.com/actions/setup-node/issues/206#issuecomment-774538395
+      - uses: nodenv/actions/node-version@main
+        id: nodenv
+      - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '${{ steps.nodenv.outputs.node-version }}'
+
       - name: upgrade website deps
         working-directory: website
         run: |
