--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path: ^1.8.1
   path_provider: ^2.0.11 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^6.0.3
+  sentry_flutter: ^6.6.3
   shared_preferences: ^2.0.15
   window_size:
     git:
