add mild comment for nodenv

--- a/.github/workflows/bump_node_version.yaml
+++ b/.github/workflows/bump_node_version.yaml
@@ -15,6 +15,7 @@ jobs:
       - name: setup nodenv
         run: |
           brew install nodenv
+          # See: https://github.com/nodenv/node-build#upgrading
           brew update && brew upgrade node-build
 
       - name: install latest nodejs version
