--- a/.github/workflows/flutter_ci.yaml
+++ b/.github/workflows/flutter_ci.yaml
@@ -32,36 +32,36 @@ on:
   workflow_dispatch:
 
 jobs:
-  flutter_format:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2.4.0
-        with:
-          cache: true
-      - name: setup flutter channel
-        shell: bash
-        run: ./scripts/setup_flutter.sh
-      - run: flutter format -l 120 --set-exit-if-changed .
+  # flutter_format:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 5
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: subosito/flutter-action@v2.4.0
+  #       with:
+  #         cache: true
+  #     - name: setup flutter channel
+  #       shell: bash
+  #       run: ./scripts/setup_flutter.sh
+  #     - run: flutter format -l 120 --set-exit-if-changed .
 
-  flutter_analyze:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2.4.0
-        with:
-          cache: true
-      - name: setup flutter channel
-        shell: bash
-        run: ./scripts/setup_flutter.sh
-      - name: install dependencies
-        run: flutter pub get
-      - run: flutter analyze --fatal-infos --fatal-warnings .
+  # flutter_analyze:
+  #   runs-on: ubuntu-latest
+  #   timeout-minutes: 5
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: subosito/flutter-action@v2.4.0
+  #       with:
+  #         cache: true
+  #     - name: setup flutter channel
+  #       shell: bash
+  #       run: ./scripts/setup_flutter.sh
+  #     - name: install dependencies
+  #       run: flutter pub get
+  #     - run: flutter analyze --fatal-infos --fatal-warnings .
 
   flutter_tests:
-    needs: [flutter_format, flutter_analyze]
+    # needs: [flutter_format, flutter_analyze]
     runs-on: ${{ matrix.os }}
     timeout-minutes: 20
     strategy:
