--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   # See: https://github.com/google/flutter-desktop-embedding/tree/master/plugins/file_selector
   file_selector: ^0.9.0
-  file_selector_linux: ^0.0.2+1
+  file_selector_linux: ^0.0.3
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -47,7 +47,7 @@ dependencies:
   path: ^1.8.1
   path_provider: ^2.0.11 # See: https://flutter.dev/docs/cookbook/persistence/reading-writing-files
   provider: ^6.0.3
-  sentry_flutter: ^6.9.0
+  sentry_flutter: ^6.9.1
   shared_preferences: ^2.0.15
   window_size:
     git:
