--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -22,11 +22,15 @@ jobs:
         shell: zsh {0} # See: https://github.com/actions/virtual-environments/issues/264#issuecomment-574032011
         run: ./scripts/setup_flutter.sh
 
+      - name: setup flutter desktop
+        shell: bash
+        run: .github/scripts/macos/install_additional_requirements_for_flutter.sh
+
       - run: flutter pub get
-      - name: install native deps on macs
+      - name: update native deps on macs
         if: runner.os == 'macOS'
         working-directory: macos
-        run: which pod && pod --version && pod install
+        run: which pod && pod --version && pod update
 
       - run: flutter pub upgrade --null-safety # See: https://dart.dev/tools/pub/cmd/pub-upgrade#--null-safety
       - name: upgrade external binary
