--- a/.github/workflows/flutter_deps.yaml
+++ b/.github/workflows/flutter_deps.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: update native deps on macs
         if: runner.os == 'macOS'
         working-directory: macos
-        run: which pod && pod --version && pod update
+        run: which pod && pod --version && rm Podfile.lock && pod install
 
       - run: flutter pub upgrade --null-safety # See: https://dart.dev/tools/pub/cmd/pub-upgrade#--null-safety
       - name: upgrade external binary
