--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -48,6 +48,11 @@ jobs:
             echo $ZSH_NAME $ZSH_VERSION
             REVISION=$GITHUB_SHA
             P8_PATH="../README.md" # dummy for dry-run
+
+            ASC_KEY_ID=xxx \
+            ASC_ISSUER_ID=xxx \
+            APPLE_ID=xxx \
+            ITC_TEAM_ID=xxx \
             ./scripts/deploy_macos_app_to_app_store.sh \
             -revision "$REVISION" -p8-file-path "$P8_PATH" -sentry-dsn ${{ secrets.SENTRY_DSN }} \
             --dry-run --skip-test
