--- a/.github/workflows/deploy_macos_dry_run.yaml
+++ b/.github/workflows/deploy_macos_dry_run.yaml
@@ -54,5 +54,5 @@ jobs:
             APPLE_ID=xxx \
             ITC_TEAM_ID=xxx \
             ./scripts/deploy_macos_app_to_app_store.sh \
-            -revision "$REVISION" -p8-file-path "$P8_PATH" -sentry-dsn ${{ secrets.SENTRY_DSN }} \
+            -revision "$REVISION" -p8-file-path "$P8_PATH" -sentry-dsn "https://example.com" \
             --dry-run --skip-test
