--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -7,7 +7,7 @@ name: Create Release
 on:
   workflow_dispatch:
   pull_request:
-    branches: [prepare_for_release]
+    branches: [prepare_for_release] # See: .github/workflows/create_release_pr.yaml
 
 jobs:
   create_release:
